# braubar-temp

./: .gitignore  CMakeLists.txt  Makefile  README.md  Temperatur_Gas.ino  braubar_proto.h  braubar_temp.ino  config.h  ds18b20.h  fehlerprotokoll_21_11_2015  lala  lala2  readsocket.py  receiver.py  shift.py
Arduino-Makefile/examples/Blink/: Makefile
TempSerial/: TempSerial.py  Temperaturverlauf.txt
lib/Ethernet/src/: Dhcp.cpp.d  Dns.cpp.d  Ethernet.cpp  Ethernet.cpp.d  EthernetClient.cpp.d  EthernetServer.cpp.d  EthernetUdp.cpp.d
lib/Ethernet/src/utility/: socket.cpp.d  w5100.cpp.d
platformlibs/SPI/: SPI.cpp.d
